fix(CardBudget): formata a validade do orçamento para melhor legibilidade fix(BudgetContentClient): evita mutação direta do estado ao remover cliente refactor(Header): remove código comentado e melhora a legibilidade do CSS refactor(Budget): utiliza structuredClone para evitar mutações indesejadas

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -18,9 +18,6 @@
     align-items: center;
     flex: auto auto;
     flex-wrap: wrap;
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
-    /* grid-template-columns: auto minmax(350px, 1fr); */
     gap: 3vh;
 }
 
